kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: appwrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: redis-commander.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-commander-service
                port:
                  number: 8081
    - host: adminer.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer-service
                port:
                  number: 8080
    - host: maildev.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maildev-service
                port:
                  number: 1080
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appwrite-api-service
                port:
                  number: 80
